@@ -45,6 +45,7 @@ Version 1.3.12+svn:
      make sure it stays in sync
    * units spawned with unit in events can now have random traits and also the
      names are the same (bug #10501)
+   * load the recall list with a start of scenario save (bug #10444)
  * miscellaneous and bug fixes:
    * various bug fixes and code cleanups
    * added gzip and gunzip command line parameters
